# Frontier-CS

./: .gitignore  CONTRIBUTING.md  README.md  SUBMIT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: algorithmic_problem.md  research_problem.md
.github/workflows/: sync-hf.yml  update_problem_count.yml  validate-problems.yml  weekly-eval.yml
2.0/: CONTRIBUTING.md  README.md
adapters/frontier-cs-2.0/: README.md  adapter_metadata.json  parity_experiment.json  pyproject.toml  run_frontier-cs-2.0.yaml
adapters/frontier-cs-2.0/src/frontier_cs_2_0/: __init__.py  adapter.py  main.py  utils.py
adapters/frontier-cs-2.0/src/frontier_cs_2_0/task-template/: task.toml
adapters/frontier-cs-2.0/src/frontier_cs_2_0/task-template/environment/: AGENT.md  Dockerfile  Dockerfile.judge  cancel_submission.py  docker-compose.yaml  judge_server.py  submit.py  submit.sh
adapters/frontier-cs-2.0/src/frontier_cs_2_0/task-template/solution/: solve.sh
adapters/frontier-cs-2.0/src/frontier_cs_2_0/task-template/tests/: evaluate.py  test.sh
adapters/frontier-cs-algorithm/: README.md  pyproject.toml
algorithmic/: Dockerfile  README.md  docker-compose.yml
algorithmic/scripts/: gpt5_reasoning_effort_experiment.py
research/: README.md
research/scripts/: check_solutions.py  gen_env.py  generate_solutions.py  problems.txt
scripts/: detect_changed_problems.py  export_hf_dataset.py  run_eval.sh  update_problem_count.py  validate_problems.py  viz.py
src/frontier_cs/: __init__.py  cli.py  config.py  models.py  single_evaluator.py
(+10003 files in other folders)
