[project]
name = "harbor-frontier-cs-2-0-adapter"
version = "0.1.0"
description = "Harbor adapter for the Frontier-CS 2.0 track"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0", "harbor"]

[project.scripts]
frontier-cs-2-0 = "frontier_cs_2_0.main:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "frontier_cs_2_0"

[tool.uv.sources]
harbor = { path = "../../" }

[dependency-groups]
dev = [
    "harbor",
]
